--- a/examples/Scotrail.ipynb
+++ b/examples/Scotrail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e5cf274",
+   "id": "37beaf2b",
    "metadata": {},
    "source": [
     "# ScotRail Analysis with Ibis\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db1c0d19",
+   "id": "bf8266fa",
    "metadata": {},
    "source": [
     "Next we need to connect to the datasette. This is done by passing the full URL to `ibis.datasette.connect`:"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2302fb8",
+   "id": "1d4c5ef8",
    "metadata": {},
    "source": [
     "Once connected, we can start poking around.\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e31c1035",
+   "id": "9cc005a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e45f60f9",
+   "id": "539332a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c8eff4",
+   "id": "3071232f",
    "metadata": {},
    "source": [
     "The main table is `announcments`, the most interesting columns of which are:\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c7781fb",
+   "id": "1dc1cdeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b8c4496",
+   "id": "edb2fa9e",
    "metadata": {},
    "source": [
     "To get a better sense of the scale of data we're working with, lets take a closer look at the `Category` column.\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e94acdd",
+   "id": "cb46cf07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bab52ec",
+   "id": "fe5d094e",
    "metadata": {},
    "source": [
     "Here we can see there are 23 categories, with 90% of the audio clips falling into the first 6. A few categories to highlight:\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02f173e7",
+   "id": "f8c5c5e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85ced25d",
+   "id": "f7939faa",
    "metadata": {},
    "source": [
     "All of these rows also include a link to an `mp3` file containing that clip. To play a clip in a jupyter notebook, we can make use of `IPython.display.Audio`. For example, lets play the first clip from above:"
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb55618",
+   "id": "db197d99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9edf426",
+   "id": "4f77f8c4",
    "metadata": {},
    "source": [
     "## Generating a Random Apology\n",
@@ -248,10 +248,10 @@
     "         .limit(1)\n",
     "    )\n",
     "\n",
-    "def phrase(t):\n",
+    "def phrase(text):\n",
     "    \"\"\"Select a row with a specific transcription\"\"\"\n",
     "    return (\n",
-    "        t.filter(_.Transcription == t)\n",
+    "        t.filter(_.Transcription == text)\n",
     "         .select(\"Transcription\", \"mp3\")\n",
     "         .limit(1)\n",
     "    )\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b618a6d",
+   "id": "a43351da",
    "metadata": {},
    "source": [
     "Since the query selects random rows, if you run the cell below multiple times, you should see different results every time:"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "284bd09d",
+   "id": "3f193d7f",
    "metadata": {},
    "source": [
     "If we wanted to do all computation in the backend, we could use `group_concat` ([docs](https://www.sqlite.org/lang_aggfunc.html#group_concat)) to then concatenate the Transcription rows together, returning a single string:"
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6bfcb40",
+   "id": "470d2e2c",
    "metadata": {},
    "source": [
     "Note that the full query above is translated to SQL and executed on the `datasette` server, no computation is happening locally.\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2603d0ad",
+   "id": "7485b4d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7209e16",
+   "id": "c62d8676",
    "metadata": {},
    "source": [
     "However, we're only using `ibis` to push the bulk of the computation to the backend. We don't need to handle _everything_ in SQL, only enough to reduce the size of the results to something reasonable to return from the `datasette` server.\n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7a1adec",
+   "id": "82eaa616",
    "metadata": {},
    "source": [
     "## A \"Random Apology\" Button"
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036a15d2",
+   "id": "51bd234d",
    "metadata": {},
    "source": [
     "The [ipywidgets](https://ipywidgets.readthedocs.io) library provides support for building simple UIs in Python, with the rendering handled by the notebook. This is nice for me, as I am _not_ a web engineer - I'm a novice at best at javascript/html. However, I do know how to write Python.\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be789b8f",
+   "id": "8e405257",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c5ccd56",
+   "id": "4d833b56",
    "metadata": {},
    "source": [
     "## Review\n",
